Port to 1.21.1 (incomplete)